Made theme.ini alot cleaner.
Signed-off-by: Hakim Zulkufli <acrox999@gmail.com>

--- a/theme.ini
+++ b/theme.ini
@@ -1,4 +1,5 @@
 [theme]
+#Menu Related Variables
 menu_x = .14
 menu_y = .16
 main_menu_vspacing = 0.037
@@ -11,6 +12,7 @@ song_list_x = .12
 song_listscore_x = .8
 multiplayertext6 = .14, .16, .505, .037
 
+#In-game Variables
 fretK_color = #000000
 obar_hscale = 0.97
 obar_3dfill = True
@@ -83,7 +85,7 @@ fail_songname_y = .365
 fail_text_y = .45
 fail_text_x = .53
 
-
+#Setlist Variables
 song_listcd_cd_x = .78	
 song_listcd_cd_y =.615
 song_listcd_score_x =.60
@@ -100,7 +102,7 @@ song_select_submenu_y = .085
 song_select_submenu_offset_lines = 2
 song_select_submenu_offset_spaces = 21
 
-
+#Menu Related Variables 2
 career_title_color = #FFFFFF
 opt_text_color = #FFFFFF
 opt_selected_color = #FFBF00
@@ -169,6 +171,7 @@ result_cheats_color = #FFFFFF
 result_menu_x = .1
 result_menu_y = .565
 
+#In-game Variables
 small_1x_mult = False
 
 pause_text_x = .37
@@ -189,15 +192,15 @@ star_fillup_in_radius = 105
 star_fillup_out_radius = 139
 star_fillup_color = #FFF25E
 
+#Menu Related Varibles
 solotext2 = .517, .53, .6 , .079
-
-
 multiplayertext6 = .415, .54, .85 , .045
 settingstext9 = .493, .75, .5 , .07
 advsettingstext10 = .493, .75, .5 , .07
 failtext3 = .65, .45, .45, .065
 careerfailtext4 = .65, .45, .45, .065
 
+#Loading Related Variables
 loading_X = .5
 loading_Y = .35
 
